<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_body"
    >

    <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:background="@color/main_background"
            android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/loading_spinner"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/main_white"
                android:text="@string/loading_spinner"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:id="@+id/logoutBtn"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/start_first_step"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_start_h3"
                android:textSize="20sp"
                android:textColor="@color/main_white"
                android:textAlignment="center"
                android:gravity="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_start_h3_info"
                android:textColor="@color/main_white"
                android:textSize="12sp"
                android:textAlignment="center"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_white"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_black"
                    android:textSize="15sp"
                    android:hint="@string/hint_email"
                    android:inputType="textWebEmailAddress"
                    android:id="@+id/email"
                    android:layout_gravity="center_horizontal|bottom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_red"
                    android:textSize="14sp"
                    android:id="@+id/step_one_error_notf"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_continue"
                android:id="@+id/forward"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/start_second_step_register"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_start_step2_h3_register"
                android:textSize="20sp"
                android:textColor="@color/main_white"
                android:textAlignment="center"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_white"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_black"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:hint="@string/hint_password"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_black"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:id="@+id/password_again"
                    android:hint="@string/hint_password_again"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_red"
                    android:textSize="14sp"
                    android:id="@+id/step_two_error_notf_register"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_continue"
                android:id="@+id/forward_pass_register"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/start_second_step_login"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_start_step2_h3_login"
                android:textSize="20sp"
                android:textColor="@color/main_white"
                android:textAlignment="center"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_white"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_black"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:id="@+id/password_login"
                    android:hint="@string/hint_password"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_red"
                    android:textSize="14sp"
                    android:id="@+id/step_two_error_notf_login"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_continue"
                android:id="@+id/forward_pass_login"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>